# gnu_adonthell

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  FULLSCREEN.howto  INSTALL  Makefile  Makefile.am  Makefile.in  NEWBIE  NEWS  OBSOLETE  README  README.BeOS  README.FreeBSD  README.Linux  README.MacOSX  README.Solaris  README.Win32  README.Windows  acinclude.m4  aclocal.m4  adonthell.spec.in  autogen.sh  clean.sh  config.cache  config.h.in  config.status  configure  configure.ac  configure.in  forest.map  header.h  header.h.in  make_bundle.sh  make_linux_appimg.sh  make_osx_bundle.sh  make_windows_pkg.sh  test1.pnm  test2.pnm  (+2 more)
doc/: Makefile.am  Makefile.in  animation.dia  animedit.lyx  animedit.ps  animedit.txt  character.dia  charedit.lyx  dependencies.dia  dialog.dxt  dialog.lyx  dlgedit.lyx  dlgedit_debug.ps  dlgedit_edit.ps  dlgedit_main.ps  dlgedit_run.ps  event.dxt  event.lyx  gfx_global.dia  graphic_system.lyx  graphic_system.ps  graphic_system.txt  image.dia  image.eps  input.lyx  interpreter.lyx  items.txt  mainpage.dxt  map.dia  map.dxt  map.lyx  mapcharschedules.dxt  mapviewschedules.dxt  prog_rules.dxt  python.dxt  ref.lyx  reference.cfg  save.dxt  screen.dia  step1.ps  (+6 more)
doc/devel/: .cvsignore  Makefile.am  dialog.dxt  event.dxt  gametime.dxt  intro.dxt  mainpage.dxt  map.dxt  mapcharschedules.dxt  mapviewschedules.dxt  newmap.dxt  python.dxt  reference.cfg  save.dxt
doc/devel/figures/: map_obj_shape.eps  map_obj_shape.sk  map_obj_shape_extra.eps  map_obj_shape_extra.sk  map_obj_sloap.eps  map_obj_sloap.sk  vectors1.eps  vectors1.sk  vectors2.eps  vectors2.sk
doc/dlgedit/: Makefile.am  Makefile.latex  dlgedit.cfg  dlgedit.dxt  dlgedit.sty  dlgedit.tex  dlgedit_debug.eps  dlgedit_edit.eps  dlgedit_main.eps  dlgedit_run.eps  footer.html  step1.eps  step2.eps  step3.eps  step4.eps
doc/dlgedit-api/: Makefile.am  dlgedit-api.cfg
doc/items/: Makefile.am  Makefile.latex  header.html  items.cfg  items.dxt  items.sty  items.tex
src/: .cvsignore  .indent.pro  Makefile  Makefile.am  Makefile.in  SDL_ttf.c  achievements.cc  achievements.h  adonthell.cc  adonthell.h  alextest.cpp  animation.cc  animation.cpp  animation.h  animation_off.cpp  animation_off.h  animtest.cc  animtest.cpp  array_tmpl.cc  array_tmpl.h  atk_background_template.cc  atk_background_template.h  atk_background_ui.cc  atk_background_ui.h  atk_bin.cc  atk_bin.h  atk_border.cc  atk_border.h  atk_border_template.cc  atk_border_template.h  atk_border_ui.cc  atk_border_ui.h  atk_box.cc  atk_box.h  atk_button.cc  atk_button.h  atk_button_template.cc  atk_button_template.h  atk_button_ui.cc  atk_button_ui.h  (+427 more)
src/.deps/: .cvsignore
src/audio/: Makefile.am
src/gfx/: Makefile.am  animation.cc  animation.h  drawable.cc  drawable.h  drawing_area.cc  drawing_area.h  image.cc  image.h  pnm.cc  pnm.h  screen.cc  screen.h  surface.cc  surface.h
src/gui/: Makefile.am  background.cc  background.h  background_template.cc  background_template.h  background_ui.cc  background_ui.h  base.cc  base.h  bin.cc  bin.h  border.cc  border.h  border_template.cc  border_template.h  border_ui.cc  border_ui.h  box.cc  box.h  button.cc  button.h  button_template.cc  button_template.h  button_ui.cc  button_ui.h  container.cc  container.h  event.cc  event.h  fixed.cc  fixed.h  font.cc  font.h  gui.h  image.h  keys.cc  keys.h  label.cc  label.h  label_input.cc  (+26 more)
src/input/: Makefile.am  control_event.cc  control_event.h  event.cc  event.h  joystick_event.cc  joystick_event.h  keyboard_event.cc  keyboard_event.h  listener.cc  listener.h  manager.cc  manager.h  manager_SDL.cc  mouse_event.cc  mouse_event.h  py_input.i
src/lmap/: Makefile.am  character.cc  character.h  character_with_gfx.cc  character_with_gfx.h  coordinates.cc  coordinates.h  landmap.cc  landmap.h  moving.cc  moving.h  object.cc  object.h  object_with_gfx.cc  object_with_gfx.h  placeable.cc  placeable.h  placeable_area.cc  placeable_area.h  placeable_area_gfx.cc  placeable_area_gfx.h  placeable_gfx.cc  placeable_gfx.h  placeable_model.cc  placeable_model.h  placeable_model_gfx.cc  placeable_model_gfx.h
src/map/: Makefile.am  character.cc  character.h  character_with_gfx.cc  character_with_gfx.h  coordinates.cc  coordinates.h  landmap.cc  landmap.h  moving.cc  moving.h  object.cc  object.h  object_with_gfx.cc  object_with_gfx.h  placeable.cc  placeable.h  placeable_area.cc  placeable_area.h  placeable_area_gfx.cc  placeable_area_gfx.h  placeable_gfx.cc  placeable_gfx.h  placeable_model.cc  placeable_model.h  placeable_model_gfx.cc  placeable_model_gfx.h
src/modules/: .cvsignore  Makefile.am  adonthell.py  dialogue.py
src/python/: Makefile.am  base.cc  base.h  callback.cc  callback.h  object.cc  object.h
src/tools/: Makefile.am  Makefile.in
src/tools/animedit/: Makefile.am  animedit.cc
src/tools/charedit/: .cvsignore  Enter.txt  Makefile  Makefile.am  Makefile.in  attributes.txt  callbacks.cc  callbacks.h  dirbrowser.cc  dirbrowser.h  interface.cc  interface.h  main.cc  main.h  mergechars.cc
src/tools/combat/: .cvsignore  Makefile.am  Makefile.in  README  book.py  character_base.h  combat-test.cc  combat-test.cpp  combat_classes.h  fileops.h  item_base.cc  item_base.h  items.h  itemtest.cc  melee.cc  melee.cpp  py_itemtest.i  py_itemtest_wrap.cc  storage.h  types.h  weapon.py  yarg.cc
src/tools/dlgedit/: .cvsignore  BUGS  INSTALL  Makefile  Makefile.am  Makefile.in  TODO  callbacks.cc  callbacks.h  cfg_data.cc  cfg_data.h  cfg_io.cc  cfg_io.h  cfg_project.cc  cfg_project.h  character.py  circle.cc  circle.h  compile.cc  compile.h  cond.tab.cc  cond.tab.h  condition.l  condition.y  crcle_callbacks.cc  crcle_callbacks.h  crcle_interface.cc  crcle_interface.h  create_code.cc  dbg_callbacks.cc  dbg_callbacks.h  dbg_interface.cc  dbg_interface.h  debug.cc  debug.h  dialogue.py  dlg_arrow.cc  dlg_arrow.h  dlg_circle.cc  dlg_circle.h  (+136 more)
src/tools/fontedit/: .cvsignore  Makefile  Makefile.am  Makefile.in  font_editor.cc  win_font_editor.cpp  win_font_editor.h
src/tools/item/: Makefile.in  book.py  character_base.cc  character_base.h  default_inventory.py  (+13 more)
(+66 files in other folders)
